# Aider-and-OpenRouter-Script-for-Processing-Multiple-Files

./: .gitignore  README.md  environment.yaml  pyproject.toml  pytest.ini
Aider_Project/: execute_helper.py  main.py  runner.py  utils.py
tests/: test_execute_helper.py  test_main.py  test_runner.py  test_utils.py
